# gutenberg_updates

./: .gitignore  CLAUDE.md  README.md  categories.py  categories.txt  categories_ids.txt  categories_test.txt  clean_500s.py  done_authors.txt  load_author_wiki_from_json.py  load_book_wiki_from_json.py  load_bookshelves_from_json.py  load_summaries_from_table.py  main.py  perplexity.py  process_sql_results.py  pyproject.toml  readability.py  requirements.txt  summaries.py  tests.py  utils.py  validate_book_wiki.py  wiki_based_summaries.py  wiki_for_authors.py  wiki_for_books.py
errors/: 12_24.txt  errors_01_25.txt  errors_03_25.txt  errors_07_25.txt  errors_08_25.txt  errors_10_25.txt  errors_11_25.txt  summaries.txt
processed_results/author_wikipedia/: author_wikipedia_10_25.jsonl
processed_results/book_wikipedia/: book_wikipedia_10_25.jsonl
processed_results/categories/: categories_10_25.jsonl
processed_results/readability/: readability_10_25.jsonl
processed_results/summaries/: summaries_10_25.jsonl
results/: categories.txt  readability.txt  redo_categories.txt  summaries.txt  update_01_25.txt  update_03_25.txt  update_07_25.txt  update_08_25.txt  update_10_25.txt  update_11_25.txt  update_12_24.txt
